fix wrong font awesome code

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -93,12 +93,12 @@ pre code {
 .categories-expo .tags-expo-list .post-tag::before {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  content: "f1ea";
+  content: "\f1ea";
   margin: 0 2px;
 }
 
 .categories-expo .tags-expo-section h2::before {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  content: "\f02b" !important;
+  content: "\f1ea" !important;
 }
